# substrate-node-template

./: .gitmodules  Makefile  README.md
.github/ISSUE_TEMPLATE/: ask-a-question.md  report-a-bug.md  suggest-a-feature.md
.github/workflows/: blank.yml
bca-lambdas/: README.md  package-lock.json  template.yml
bca-lambdas/.aws-sam/: build.toml
bca-lambdas/src/handlers/: create-collection.js
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/bca/: Cargo.toml  README.md
pallets/bca/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/dumbo/: Cargo.toml
pallets/dumbo/src/: lib.rs
pallets/peanut-gallery/: Cargo.toml
pallets/peanut-gallery/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: init.sh  package.json
scripts/src/: index.js  lib.js
