[package]
authors = ['Blockchain.art <contact@blockchain.art>']
description = 'Blockchain.art business logic'
edition = '2018'
homepage = 'https://blockchain.art/'
license = 'Unlicense'
name = 'pallet-bca'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '0.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
orml-nft = { default-features = false, version = '0.4.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }

serde = { version = "1.0.119" }

[dev-dependencies]
pallet-balances = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'orml-nft/std',
	"sp-runtime/std",
	"sp-std/std",
	"serde/std",
]
runtime-benchmarks = ['frame-benchmarking']
