[package]
authors = ['Dan Forbes <dan@parity.io>']
description = 'Example pallet to explore the FRAME origin primitive.'
edition = '2018'
homepage = 'https://github.com/danforbes/substrate-node-template/tree/origin'
license = 'Unlicense'
name = 'pallet-dumbo'
repository = 'https://github.com/danforbes/substrate-node-template/tree/origin'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
